# pyFEM-repository

./: .gitignore  prova di commit.txt  understanding_python_classes.ipynb
PYFEM/: Untitled.ipynb  pyproject.toml
PYFEM/1st_Assignment/: 1-Assignment.ipynb  Assignment_1_task1.py  Untitled.ipynb  one_bar_in_2d.py
PYFEM/Soluzioni pyFEM Prof/pyFEM_03/: two_springs.py
PYFEM/Soluzioni pyFEM Prof/pyFEM_07/: two_springs.py
PYFEM/Soluzioni pyFEM Prof/pyFEM_12/examples/: two_springs.py
PYFEM/Soluzioni pyFEM Prof/pyFEM_13/pyfem/: __init__.py
PYFEM/Soluzioni pyFEM Prof/pyFEM_15/pyfem/: __init__.py
PYFEM/Soluzioni pyFEM Prof/pyFEM_16/: .gitignore
PYFEM/Soluzioni pyFEM Prof/pyFEM_19/examples/: one_spring_two_bars.py
PYFEM/Soluzioni pyFEM Prof/pyFEM_19/pyfem/: fem.py
PYFEM/examples/: brown_truss.py  ill_constrained.py  integrate_1d.py  one_bar.py  one_bar_in_2d.py  one_spring_two_bars.py  prof.py  two_3node_bars.py  two_bar_truss.py  two_springs.py  wasted_memory_dense_storage.py
PYFEM/pyfem/: __init__.py  dof_registry.py  dof_types.py  element_compatibility.py  element_properties.py  fem.py  materials.py  mesh.py  model.py  post_processor.py  quadrature.py  solvers.py  step.py
PYFEM/pyfem.egg-info/: SOURCES.txt
PYFEM/pyfem/elements/: bar3_1d.py  bar_1d.py  bar_2d.py
PYFEM/tests/: test_brown_truss.py  test_one_spring_two_bars.py  test_validation.py
PYFEM/zSoluzioni pyFEM Prof/pyFEM_05/: two_springs.py
PYFEM/zSoluzioni pyFEM Prof/pyFEM_08/: .gitattributes  .gitignore
PYFEM/zSoluzioni pyFEM Prof/pyFEM_15/: pyproject.toml
pyFEM_02/: two_springs.py
(+213 files in other folders)
